compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__shadowed_imported_value_marked_unused.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 431
expression: "\nimport wibble.{wibble}\n\npub const wibble = 2\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam

pub const wibble = 1


-- main.gleam

import wibble.{wibble}

pub const wibble = 2


----- WARNING
warning: Unused imported module
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ import wibble.{wibble}
  │ ^^^^^^^^^^^^^^^^^^^^^^ This imported module is never used

Hint: You can safely remove it.

warning: Shadowed Import
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ pub const wibble = 2
  │ ^^^^^^^^^^^^^^^^ `wibble` is defined here

Definition of wibble shadows an imported value.
The imported value could not be used in this module anyway.
Hint: Either rename the definition or remove the import.
