compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__type_and_variant_unused.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 106
expression: "\ntype PrivateType {\n  PrivateConstructor\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type PrivateType {
  PrivateConstructor
}


----- WARNING
warning: Unused private type
  ┌─ /src/warning/wrn.gleam:2:1
  │
2 │ type PrivateType {
  │ ^^^^^^^^^^^^^^^^ This private type is never used

Hint: You can safely remove it.

warning: Unused private constructor
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   PrivateConstructor
  │   ^^^^^^^^^^^^^^^^^^ This private constructor is never used

Hint: You can safely remove it.
