compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__type_variant_only_referenced_by_unused_function.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 69
expression: "\ntype Wibble {\n  Wibble\n  Wobble\n}\n\nfn unused() {\n  Wibble\n}\n\npub fn used() {\n  let _ = Wobble\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type Wibble {
  Wibble
  Wobble
}

fn unused() {
  Wibble
}

pub fn used() {
  let _ = Wobble
  Nil
}


----- WARNING
warning: Unused private constructor
  ┌─ /src/warning/wrn.gleam:3:3
  │
3 │   Wibble
  │   ^^^^^^ This private constructor is never used

Hint: You can safely remove it.

warning: Unused private function
  ┌─ /src/warning/wrn.gleam:7:1
  │
7 │ fn unused() {
  │ ^^^^^^^^^^^ This private function is never used

Hint: You can safely remove it.
