compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__dead_code_detection__used_shadowed_imported_value.snap
---
source: compiler-core/src_refactored/__core/type_/tests/dead_code_detection.rs
assertion_line: 448
expression: "\nimport wibble.{wibble}\n\npub const wibble = wibble\n"
snapshot_kind: text
---
----- SOURCE CODE
-- wibble.gleam

pub const wibble = 1


-- main.gleam

import wibble.{wibble}

pub const wibble = wibble


----- WARNING
warning: Shadowed Import
  ┌─ /src/warning/wrn.gleam:4:1
  │
4 │ pub const wibble = wibble
  │ ^^^^^^^^^^^^^^^^ `wibble` is defined here

Definition of wibble shadows an imported value.
The imported value could not be used in this module anyway.
Hint: Either rename the definition or remove the import.
